Labs/03 Secure with mTLS - JWT/01 authentication with mTLS/02_mesh-mTLS-STRICT.yaml
apiVersion: "security.istio.io/v1beta1"
kind: PeerAuthentication
metadata:
  name: mesh-strict-policy
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
