Labs/03 Secure with mTLS - JWT/01 authentication with mTLS/02_namespace-mTLS-STRICT.yaml
apiVersion: "security.istio.io/v1beta1"
kind: PeerAuthentication
metadata:
  name: strict-policy
  namespace: default
spec:
  mtls:
    mode: STRICT
