Labs/03 Secure with mTLS - JWT/01 authentication with mTLS/04_details-service-mTLS-STRICT.yaml
kind: PeerAuthentication
metadata:
  name: default-namespace-permissive
  namespace: default
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: details-service-strict
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  mtls:
    mode: STRICT
