Labs/03 Secure with mTLS - JWT/01 authentication with mTLS/05_namespace-mTLS-STRICT.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: details-service-strict
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  mtls:
    mode: STRICT
