Labs/03 Secure with mTLS - JWT/01 authentication with mTLS/03_details-ISTIO-MUTUAL.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: default
spec:
  host: details.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
