Labs/03 Secure with mTLS - JWT/01 authentication with mTLS/05_details-service-destination-rule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: details-destination-rule
spec:
  host: details.default.svc.cluster.local  
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
